--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ canvas {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* image-rendering: pixelated; */
+    image-rendering: pixelated;
 }
 
 body {
