--- a/style.css
+++ b/style.css
@@ -35,10 +35,22 @@ canvas {
     top: 1%;
     left: 1%;
     width: 50%;
-    height: 10%;
+    height: 50%;
     font-family: VCR_OSD;
     font-size: 200%;
     color: white;
+}
+#midMsg {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    width: 50%;
+    height: 50%;
+    transform: translate(-50%, -50%);
+    font-family: VCR_OSD;
+    font-size: 200%;
+    color: gold;
 }
 
 body {
