--- a/style.css
+++ b/style.css
@@ -31,13 +31,13 @@ canvas {
     transform: translate(-50%, -50%);
 }
 #restarts {
-    position: relative;
+    position: absolute;
     top: 1%;
     left: 1%;
     width: 50%;
     height: 50%;
     font-family: VCR_OSD;
-    font-size: 200%;
+    font-size: 2.5vw;
     color: black;
     text-shadow: red 0 0 4px;
 }
@@ -50,7 +50,7 @@ canvas {
     height: 50%;
     transform: translate(-50%, -50%);
     font-family: VCR_OSD;
-    font-size: 200%;
+    font-size: 2.5vw;
     color: black;
     text-shadow: gold 0 0 4px;
 }
@@ -63,7 +63,7 @@ canvas {
     height: 10%;
     transform: translate(-50%, 0%);
     font-family: VCR_OSD;
-    font-size: 200%;
+    font-size: 2.5vw;
     color: black;
     text-shadow: darkred 0 0 4px;
     display: none;
@@ -76,11 +76,51 @@ canvas {
     width: 80%;
     height: 80%;
     font-family: VCR_OSD;
-    font-size: 200%;
+    font-size: 2.5vw;
     color: black;
     text-shadow: gold 0 0 8px;
     background-color: black;
     display: block;
+}
+#amenu {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    font-family: VCR_OSD;
+    font-size: 2.5vw;
+    color: black;
+    text-shadow: gold 0 0 8px;
+    background-color: black;
+    display: none;
+}
+#start {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 10%;
+    height: 8%;
+    text-align: center;
+    font-family: VCR_OSD;
+    font-size: 2.5vw;
+    color: black;
+    text-shadow: gold 0 0 4px;
+}
+#mute {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 10%;
+    height: 8%;
+    text-align: center;
+    font-family: VCR_OSD;
+    font-size: 2.5vw;
+    color: black;
+    text-shadow: red 0 0 4px;
 }
 #yap {
     position: absolute;
@@ -91,7 +131,7 @@ canvas {
     width: 80%;
     height: 80%;
     font-family: VCR_OSD;
-    font-size: 200%;
+    font-size: 2.5vw;
     color: black;
     text-shadow: red 0 0 8px;
     background-color: black;
